--- a/sections/simulaciones_36v.tex
+++ b/sections/simulaciones_36v.tex
@@ -1,11 +1,11 @@
 \section{Simulaciones del cargador}
 
 En paralelo con el estudio teórico, se realizaron simulaciones del circuito propuesto en el software de simulación de circuitos electrónicos LTSpice.
-Una imagen completa del circuito puede verse en las figuras \ref{fig:sim-full-1} y \ref{fig:sim-full-2}, incluídas en el apéndice.
+Una imagen completa del circuito puede verse en las figuras \ref{fig:sim-full-1} y \ref{fig:sim-full-2}, incluidas en el apéndice.
 
-Este circuito brinda una simulación precisa del ciclo de carga, pero no fué utilizado de forma extensiva por dos motivos.
+Este circuito brinda una simulación precisa del ciclo de carga, pero no fue utilizado de forma extensiva por dos motivos.
 Primero, el circuito completo es muy complejo y requiere de un gran esfuerzo computacional para su simulación.
 Para resolver este problema se dividió la simulación por partes,
-corroborando periodicamente durante el desarrollo que los cambios a las distintas partes del circuito no afectaban el comportamiento de las otras.
+corroborando periódicamente durante el desarrollo que los cambios a las distintas partes del circuito no afectaban el comportamiento de las otras.
 El segundo motivo fue la necesidad de acotar el proyecto a un circuito más simple debido a limites temporales,
 por lo que la simulación final resultó ser un circuito reducido que se muestra en la figura \ref{fig:sim-final}.
