Simulaciones del prototipo

--- a/sections/conclusiones.tex
+++ b/sections/conclusiones.tex
@@ -1,7 +1,11 @@
 \section{Conclusiones}
 
+% Repetir el objetivo, describir el trabajo realizado. 
+% Destacar aspectos más importantes y concluir algo sobre ellos. 
+% Ejemplo: los aspectos más difíciles de resolver, algo que presentó inesperadas dificultades. 
+% Cambio de rumbo en cuanto a objetivos, razones y consecuencias. 
 % EMPEZAR CON LAS COSAS BUENAS: Se logró, se implementó, ...
-% Recomendaciones 
+% Recomendaciones específicas. Descripción de problemas que quedaron abiertos. 
 
 % Completar
 
