--- a/sections/simulaciones_baterias.tex
+++ b/sections/simulaciones_baterias.tex
@@ -29,4 +29,4 @@ Respecto al segundo modelo se agregan los siguientes componentes:
     \item La fuente de corriente controlada por corriente, representa la corriente de carga que modifica el $SOC$.
 \end{itemize}
 La tensión que existe en el circuito secundario ($V_{SOC}$) se normaliza de forma que $V_{SOC}=1V$ equivale al $SOC (100\%)$.
-La resistencia en paralelo modela la autodescarga de la batería.
+La resistencia en paralelo modela la auto-descarga de la batería.
