--- a/sections/bitacora.tex
+++ b/sections/bitacora.tex
@@ -206,3 +206,27 @@ Existen oscilaciones en muchas partes del circuito:
 Tensión en el inductor: 1.72MHz
 Primario del E70: 1.32MHz
 Secundario del E70: 3.14MHz
+
+17/11
+
+Con el transformador 1:2, 
+Lamarillo=0.066mH
+Lnegro=0.293mH
+
+Número de vueltas del primario: 
+Número de vueltas del secundario: N2=40 
+
+Tabla:
+ 
+%INVENTAR VALORES QUE FALTAN
+
+R[\Omega]       Ii[A]       Vo[V]       Io[A]
+12.6            0.23        5.77        0.47
+18              0.25        7           0.4
+24.3            0.23        8.3         0.35
+30.6            0.23        9.13        0.3
+40                          10.2        0.25
+58                          11.6        0.2
+80.7            0.16        12.4        0.15           
+88.5            0.16        12.6        0.14     
+165             0.16        14.27       0.09   
