--- a/sections/conclusiones.tex
+++ b/sections/conclusiones.tex
@@ -10,3 +10,5 @@
 % Completar
 
 Quedó pendiente por implementar el rectificador a la entrada del conversor y el circuito de control.
+
+Las oscilaciones de alta frecuencia (superior a 125kHz) observadas en las formas de onda se pueden deber a cualquier tanque LC. 
