--- a/main.tex
+++ b/main.tex
@@ -58,6 +58,7 @@
 \input{sections/diseño.tex}
 \input{sections/PCB.tex}
 %\input{sections/bitacora.tex}
+\input{sections/bitacora_publica.tex}
 \input{sections/simulaciones_prototipo.tex}
 \input{sections/conclusiones.tex}
 \input{sections/apendice.tex}
